# waterpistol

./: .gitignore  Cargo.toml  Justfile  LICENSE.md  README.md  waterpistol.yml.example
.github/workflows/: build.yml
frontend/: Cargo.toml  index.html
frontend/css/: main.css
frontend/src/: main.rs  store.rs
frontend/src/components/: compare_view.rs  ignition.rs  mod.rs  navigation.rs  status.rs  testrun_list.rs  testrun_list2.rs  testrun_show.rs  testrun_starter.rs  testrun_starter2.rs  testsuite_list.rs  uploader.rs
models/: Cargo.toml
models/src/: config.rs  lib.rs  report.rs
server/: Cargo.toml
server/src/: assets.rs  config.rs  controller.rs  error.rs  main.rs
