[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-server = "0.7.1"
clap = { version = "4.2.1", features = ["derive"] }
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
models = { path = "../models" }
serde_json = "1.0.95"
uuid = { version = "1.3.0", features = ["v4"] }
rust-embed = "8.0.0"
mime_guess = "2.0.4"
chrono = "0.4.24"
figment = { version = "0.10.8", features = ["yaml", "serde_yaml"] }
color-eyre = "0.6.2"
thiserror = "1.0.63" 
tempfile = "3.12.0"
flate2 = "1.0.31"
tar = "0.4.41"